# autoresearch-function

./: .gitignore  AGENTS.md  README.md  program.md  pyproject.toml
.autoresearch/: .gitignore
.autoresearch/engineering/portfolio-return/: config.cfg  results.tsv
.github/workflows/: autoresearch.yml  benchmark.yml
autoresearch_function/: __init__.py  benchmark.py  experiment.py  readiness_judge.py  runner.py  target_function.py
autoresearch_function.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scenarios/: config.json  scenarios.json
scripts/: run_experiment.py  status.py
tests/: test_benchmark.py  test_experiment.py  test_readiness_judge.py  test_runner.py
